@@ -20,6 +20,10 @@ Version 4.6.2  [v4-stable] (rgerhards), 2010-03-??
   in proper retries.
 - bugfix: $omfileFlushOnTXEnd was turned on when set to off and vice
   versa due to an invalid check
+- bugfix(minor): handling of extremely large strings in dbgprintf() fixed
+  Previously, it could lead to garbagge output and, in extreme cases, also
+  to segfaults. Note: this was a problem only when debug output was 
+  actually enabled, so it caused no problem in production use.
 ---------------------------------------------------------------------------
 Version 4.6.1  [v4-stable] (rgerhards), 2010-03-04
 - re-enabled old pipe output (using new module ompipe, built-in) after
